overflow fix

--- a/styles/order.scss
+++ b/styles/order.scss
@@ -69,6 +69,7 @@ header {
                 height: 45px;
                 width: 100%;
                 margin-left: 10px;
+                overflow: hidden;
             }
             .price {
                 height: 45px;
